WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116615
[EFL] Back, Forward and Stop should be hidden in context menu
https://bugs.webkit.org/show_bug.cgi?id=116615
Summary
[EFL] Back, Forward and Stop should be hidden in context menu
Michal Pakula vel Rutka
Reported
2013-05-22 07:04:25 PDT
SSIA
Attachments
proposed patch
(1.60 KB, patch)
2013-05-22 07:27 PDT
,
Michal Pakula vel Rutka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michal Pakula vel Rutka
Comment 1
2013-05-22 07:27:16 PDT
Created
attachment 202535
[details]
proposed patch
Anders Carlsson
Comment 2
2013-05-22 08:03:45 PDT
Comment on
attachment 202535
[details]
proposed patch Maybe this decision could be made by a call out to the PopupMenuClient?
Michal Pakula vel Rutka
Comment 3
2013-05-22 08:47:31 PDT
(In reply to
comment #2
)
> (From update of
attachment 202535
[details]
) > Maybe this decision could be made by a call out to the PopupMenuClient?
In case of back/forward it is possible, but I am not sure if I can made check inside UIProcess for reload/stop like DocumentLoader::isLoadingInAPISense.
Chris Dumez
Comment 4
2013-05-22 23:34:49 PDT
Comment on
attachment 202535
[details]
proposed patch One less #ifdef and it makes EFL use more common code which is always good. The items in question were not getting disabled for us anyway so it is best not to show them. r=me but let Gyuyoung have a look before landing as he may be the one who added this #ifdef in the first place.
Gyuyoung Kim
Comment 5
2013-05-22 23:44:23 PDT
There was no big reason to show those menu items. It just follows GTK port behavior. If the items doesn't work on EFL port now, I'm fine.
Gyuyoung Kim
Comment 6
2013-05-22 23:46:45 PDT
Comment on
attachment 202535
[details]
proposed patch I'd like to check API test with patch before landing.
Gyuyoung Kim
Comment 7
2013-05-22 23:55:28 PDT
Comment on
attachment 202535
[details]
proposed patch There is no problem on context menu API tests.
WebKit Commit Bot
Comment 8
2013-05-23 00:06:07 PDT
Comment on
attachment 202535
[details]
proposed patch Clearing flags on attachment: 202535 Committed
r150575
: <
http://trac.webkit.org/changeset/150575
>
WebKit Commit Bot
Comment 9
2013-05-23 00:06:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug