[EFL] Back, Forward and Stop should be hidden in context menu https://bugs.webkit.org/show_bug.cgi?id=116615

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2013-05-23
Reviewed by Christophe Dumez.

Context menu items: Back, Forward, Stop, Reload, should be shown only when
they are able to perform action.

No new tests - no new functionality.

* page/ContextMenuController.cpp:
(WebCore::ContextMenuController::populate):

Canonical link: https://commits.webkit.org/134961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150575 268f45cc-cd09-0410-ab3c-d52691b4dbfc